--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,19 +1,21 @@
 name: WakaTime Status Update
 on:
+  push:
+    branches: [ "main" ]
   schedule:
-    - cron: '0 0 * * *'
-  workflow_dispatch:
+    - cron: "0 */6 * * *"
+
 jobs:
-  update-readme:
-    name: Update WakaTime Stats
+  update-stats:
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_TITLE: true
-          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
-          TIME_RANGE: last_7_days
-          SHOW_TIME: true
-          SHOW_MASKED_TIME: true
+          SHOW_OS: "True"
+          SHOW_PROJECTS: "True"
+          SHOW_EDITORS: "True"
+          SHOW_LANGUAGE: "True"
+          SHOW_TIMEZONE: "False"
+          SHOW_LOC_CHART: "False"
