--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,21 +1,21 @@
 name: WakaTime Status Update
 on:
-  push:
-    branches: [ "main" ]
   schedule:
-    - cron: "0 */6 * * *"
-
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 jobs:
-  update-stats:
+  update-readme:
+    name: WakaTime Readme
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_OS: "True"
-          SHOW_PROJECTS: "True"
-          SHOW_EDITORS: "True"
-          SHOW_LANGUAGE: "True"
-          SHOW_TIMEZONE: "False"
-          SHOW_LOC_CHART: "False"
+          SHOW_TITLE: true
+          BLOCKS: ░▒▓█
+          TIME_RANGE: last_7_days
+          SHOW_TIME: true
+          SHOW_MASKED_TIME: true
