--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -5,22 +5,24 @@ on:
   workflow_dispatch:
 jobs:
   update-readme:
-    name: WakaTime Readme
+    name: Atualizar Estatísticas WakaTime
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          ref: ${{ github.head_ref }}
-      - name: Update WakaTime Stats
-        uses: athul/waka-readme@master
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_TITLE: true
-          BLOCKS: ░▒▓█
-          TIME_RANGE: last_7_days
-          SHOW_TIME: true
-          COMMIT_MESSAGE: "docs: atualiza estatísticas do WakaTime"
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_LANGUAGE: "True"
+          SHOW_TIMEZONE: "True"
+          SHOW_EDITORS: "True"
+          SHOW_PROJECTS: "True"
+          SHOW_OS: "True"
+          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_TOTAL_CODE_TIME: "True"
+          SHOW_SHORT_INFO: "True"
+          SHOW_LOC_CHART: "True"
+          LOCALE: "pt-br"
