--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -10,13 +10,28 @@ jobs:
     name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_TITLE: true
-          BLOCKS: ░▒▓█
-          TIME_RANGE: all_time
+          SECTION_NAME: waka
           SHOW_TIME: true
           SHOW_TOTAL: true
-          LANG_COUNT: 10
+          SHOW_MASKED_TIME: false
+          COMMIT_MESSAGE: "🎮 Status da Jogadora atualizado!"
+          BLOCKS: ░█
+          LOCALE: "pt-br"
+          COMMIT_USERNAME: "Tassia dos Santos"
+          SHOW_LINES_OF_CODE: false
+          SHOW_PROFILE_VIEWS: false
+          SHOW_COMMIT: true
+          SHOW_DAYS_OF_WEEK: true
+          SHOW_LANGUAGE: true
+          SHOW_OS: true
+          SHOW_PROJECTS: true
+          SHOW_TIMEZONE: false
+          SHOW_EDITORS: true
+          SHOW_LANGUAGE_PER_REPO: true
+          SHOW_SHORT_INFO: false
+          SHOW_LOC_CHART: false
