--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -12,4 +12,10 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_TITLE: true
-          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
+          BLOCKS: 🟪🟦🟩🟨🟧🟥
+          THEME: outrun
+          SHOW_TIME: true
+          SHOW_TOTAL: true
+          LANG_COUNT: 6
+          COMPACT_LAYOUT: true
+          CODE_LANG: txt
